--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@clerk/nextjs": "^6.12.5",
     "axios": "^1.8.3",
+    "firebase": "^10.12.2",
     "mongoose": "^8.12.1",
     "next": "15.2.3",
+    "next-pwa": "^5.6.0",
     "openai": "^4.87.4",
     "prismjs": "^1.30.0",
     "react": "^19.0.0",
